# neuromancer

./: Cargo.toml  LICENSE  README.md  notes.md
.github/workflows/: rust.yml
docs/: grpc-status-codes.md
executor/: Cargo.toml
executor/src/: errors.rs  executor.rs  main.rs  services.rs
executor/src/services/: administrative.rs
librarian/: Cargo.toml
librarian/src/: errors.rs  librarian.rs  main.rs
librarian/src/services/: job.rs
neuromancer/: Cargo.toml  build.rs
neuromancer/protos/: base.proto  executor.proto  librarian.proto
neuromancer/src/: checksum_impls.rs  errors.rs  lib.rs  socket.rs
neuromancer/src/socket/: generic.rs
supervisor/: Cargo.toml
supervisor/src/: errors.rs  main.rs
