[package]
name = "supervisor"
version = "0.1.0"
authors = ["Alyssa Verkade <alyssaverkade@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
tonic = "0.2"
prost = "0.6"
futures = "0.3"
snafu = "0.6"
ulid = "0.3.1"
bytes = "0.5"
parking_lot = "0.10"

[dependencies.neuromancer]
path = "../neuromancer"
